--- a/5lab/5lab.html
+++ b/5lab/5lab.html
@@ -20,12 +20,14 @@
         <p id="p-cont2"><u>Информатику</u> можно рассматривать как науку, исследующую <b>алгоритмы</b>. Однако, нам стоит быть осторожнее, принимая во внимание тот факт, что некоторые задачи могут и не иметь решения.</p>
         
     </div>
+    <div></div>
     <div class="container container-3">
         <p id="p-cont3">Хотя доказательство этого положения выходит за пределы данной книги, сам факт, что не для всех задач можно найти ответ, очень важен для решившего заняться изучением <u>информатики</u>. Мы сможем полностью сформулировать понятие <i><u>“информатика”</u></i>, только включив в него оба типа задач и положив, что эта наука занимается изучением как решаемых задач, так тех, что решения не имеют.</p>
     </div>
     <div class="container container-4">
         <p id="p-cont4">Так же при описании задач и их решений часто встречается слово <i>“вычислимый”</i>. Мы говорим, что задача вычислимая, если существует <b>алгоритм</b> для её решения. Таким образом, можно сформулировать альтернативное определение <u>информатики</u>, как науки, занимающейся изучением вычислимых и не вычислимых задач, существующих и несуществующих <b>алгоритмов</b>. В любом случае, вы легко можете заметить, что слово <i>“компьютер”</i> здесь нигде не употребляется.</p>
     </div>
+     <div></div>
     <div class="container container-5">
         <p id="p-cont5">
             Решение рассматривается независимо от машины.
